--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>サンプルです</title></head><body><script>document.write("Hello world!!");</script></body></html>
+<!DOCTYPE html><html><head><title>Sample</title></head><body><script>document.write("Hello world!!YUI");</script></body></html>
