--- a/yui.html
+++ b/yui.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>サンプル</title>
+<title>Sample</title>
 </head>
 <body>
-<script>document.write("Hello world!!");
+<script>document.write("Hello world!! Yui");
 </script>
 </body>
 </html>
